# o3rd

./: .gitignore  README.md  docker-compose.yml
nucleus/: Cargo.toml  Dockerfile  docker-compose.yml
nucleus/.cargo/: config.toml
nucleus/src/: config.rs  error.rs  main.rs  setup.rs
nucleus/src/app/: mod.rs  route.rs
nucleus/src/bookkeeper/: account.rs  mod.rs  model.rs  router.rs
nucleus/src/codex/: handlers.rs  mod.rs  models.rs  routes.rs
nucleus/src/dep/: config.rs  error.rs  main.rs
nucleus/src/dep/app/sketch/: route.rs
nucleus/src/dep/codex/: repositories.rs  routes.rs  schemata.rs
nucleus/src/dep/model/: mod.rs
nucleus/src/sketch/: controller.rs  mod.rs  model.rs
persona/: .gitignore  Cargo.toml  Dockerfile  next.config.js  package-lock.json  package.json
persona/sketches/: Cargo.toml
persona/sketches/src/: lib.rs  test_data.txt
persona/sketches/src/maths/: graph.rs  mod.rs  vector.rs
persona/sketches/src/maze_runner/: maze.rs  maze_old.rs  mod.rs  plane.rs
persona/src/components/Sketches/Intro/: Intro.tsx  shader.frag  shader.vert
persona/src/context/: WASM.tsx
persona/src/pages/: _app.tsx  index.tsx
persona/src/pages/codex/: [slug].tsx
persona/src/pages/sketch/: maze-runner.tsx
persona/workshop/: lib.rs
persona/workshop/maze_runner/: generator.rs  maze.rs  plane.rs
shadow/: Cargo.toml  index.html
shadow/src/: main.rs
shadow/src/components/atoms/: header.rs
