[package]
name = "nucleus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
dotenvy = "0.15.7"
mongodb = { version = "2.4.0", features = ["bson-serde_with"] }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.12"
tower-http = { version = "0.4.0", features = ["cors"] }