[package]
name = "nucleus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
mongodb = { version = "2.4.0", features = ["bson-serde_with"] }

serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1"
serde_with = "3"

axum = "0.7.2"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.12"
tower-http = { version = "0.5.0", features = ["cors"] }
tower-cookies = "0.10.0"
derive_more = "0.99.17"

tracing="0.1"
tracing-subscriber={ version = "0.3", features = ["env-filter"]}