[package]
name = "shadow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
yew = { version = "0.20.0", features = ["csr"] }
serde = "1.0.159"
serde_json = "1.0.95"
stylist = { version = "0.12.0", features = ["yew"] }